include_directories(${CMAKE_SOURCE_DIR}/lasp/c)
add_executable(test_bf test_bf.c)
add_executable(test_workers test_workers.c)
add_executable(test_fft test_fft.c)
add_executable(test_math test_math.c)
target_link_libraries(test_bf lasp_lib)
target_link_libraries(test_fft lasp_lib pthread)
target_link_libraries(test_workers lasp_lib pthread)
target_link_libraries(test_math lasp_lib pthread)
